src/sass/components/_hero.scss
.hero-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 35px 1fr;
  position: relative;
  z-index: 80;
}

.hero--contact {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: minmax(auto-fit, 300px);
}

// Share Banner in Hero Section top row only

.wrapper-inner--share {
  justify-content: end;
}

.share-banner {
  background-color: $red;
  grid-column: 1 / -1;
}

.share__list {
  color: $white;
  font-size: 1.4rem;
  grid-column: 2 / span 1;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.share__item {
  padding: 0;
  margin: 0;
}

.share__link {
  padding: 5px;
  display: flex;
}


// Full Screen banner Styles

.hero {
  grid-column: 1 / -1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  min-height: 330px;
  height: 40vh;
  background-color: cornflowerblue;
  /* position for .image-overlay */
  position: relative;
}

.image-overlay {
  content: "";
  position: absolute;
  top: 35px;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba($blue, 0.6);
  z-index: 90;
}

.hero-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;

  position: relative;
  z-index: 100;
}

.hero__auction-type {
  align-self: center;
  color: $gold;
  background-color: rgba(50, 105, 150, 0.5);
  font-size: 1.5rem;
  text-align: center;
  padding: 5px 20px;
}

.hero__title {
  color: $white;
  font-size: 1.8rem;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  text-shadow: $featured-text-shadow;

  @media (min-width: $med-screen) {
    font-size: 2rem;
  }
}

.hero__date-time {
  color: $gold;
  font-size: 1.3rem;
  text-shadow: $featured-text-shadow;

  @media (min-width: $med-screen) {
    font-size: 1.4rem;
  }
}

hr.hero__hr {
    border: 0;
    height: 1px;
    width: 60%;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(103, 103, 103), rgba(0, 0, 0, 0));
}

